--- a/TODO.txt
+++ b/TODO.txt
@@ -1,15 +1,12 @@
 TODO:
+
 	- sunburst
-		- variar mais cores
 		- ajustar os textos corretamente
 			- textos que nao cabem curvos - fazer outro esquema p mostrar
 				- texto central do root
 				- outros nodos
+		- adicionar opçao de dividir o espaço pra cada especie igualmente, independente do numero de especimes
 				
-	- fazer funcionar açao de info que vai aparecer na tooltip
-		- fazer janela de info pra taxonomia
-			- fazer botao da tooltip funcionar
-		
 	- filtrar specimens selecionados
 		- criar janela de filtragem
 		- aplicar os filtros nos selecionados
@@ -17,7 +14,16 @@ TODO:
 	- selected viz
 		- fazer nodos aperecerem proximo ao spawn correto
 		- fazer caber bem no espaço dado
+		- fazer update em ter q reescrever todos os nodos
 
+	- mudar style das comboboxes pra ficar com um tamanho mais adequado
         
 	-dotsviz
 		- alterar chamada de evento das comboboxes pra so chamar quando for selecionada opçao
+		
+		
+		/* PROXIMAS ETAPAS */
+	
+	- fazer funcionar açao de info que vai aparecer na tooltip
+		- fazer janela de info pra taxonomia
+			- fazer botao da tooltip funcionar
