--- a/TODO.txt
+++ b/TODO.txt
@@ -1,10 +1,6 @@
 TODO:
 
-	- sunburst
-		- ajustar os textos corretamente
-			- textos que nao cabem curvos - fazer outro esquema p mostrar
-				- texto central do root
-				- outros nodos
+    - sunburst
 		- adicionar opçao de dividir o espaço pra cada especie igualmente, independente do numero de especimes
 				
 	- filtrar specimens selecionados
@@ -16,7 +12,8 @@ TODO:
 		- fazer caber bem no espaço dado
 		- fazer update em ter q reescrever todos os nodos
 
-	- mudar style das comboboxes pra ficar com um tamanho mais adequado
+    - parallcoord
+        - criar viz com dados reais
         
 	-dotsviz
 		- alterar chamada de evento das comboboxes pra so chamar quando for selecionada opçao
@@ -27,3 +24,9 @@ TODO:
 	- fazer funcionar açao de info que vai aparecer na tooltip
 		- fazer janela de info pra taxonomia
 			- fazer botao da tooltip funcionar
+            
+    - sunburst
+		- ajustar os textos corretamente
+			- textos que nao cabem curvos - fazer outro esquema p mostrar
+				- texto central do root
+				- outros nodos
